# Maestro

./: .gitignore  CLAUDE.md  README.md  commit.sh  experiment_logs.md  pyproject.toml
app/: .editorconfig  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/maestro/app/: MaestroApp.kt  MainActivity.kt
app/app/src/main/java/com/maestro/app/data/local/: PdfMerger.kt  (+13 more)
app/app/src/main/java/com/maestro/app/di/: AppModule.kt  DataModule.kt  NetworkModule.kt
app/app/src/main/java/com/maestro/app/navigation/: MaestroNavGraph.kt  Screen.kt
app/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_placeholder_architecture.xml
app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/app/src/main/res/values-v27/: themes.xml
app/app/src/test/java/com/maestro/app/fake/: FakeDocumentRepository.kt  FakeSettingsRepository.kt
app/app/src/test/java/com/maestro/app/util/: MainCoroutineRule.kt  TestFixtures.kt
app/gradle/: libs.versions.toml
datasets/: mikt_statics2011_mapping.json
deploy/: cp.sh  ln.sh  maestro-celery.service  maestro-gunicorn.service  maestro.jwchae.com  result.json  result.md  sudo.sh  test.sh
ref/: geek-news-research.md
server/: .env  gunicorn.conf.py
server/accounts/: serializers.py  urls.py  views.py
server/analyzer/: models.py  serializers.py  tasks.py  urls.py  views.py
server/analyzer/management/commands/: cleanup_expired.py
server/analyzer/migrations/: 0001_initial.py  0002_analysistask_mode.py
server/config/: celery.py  settings.py  urls.py
(+74 files in other folders)
