[project]
name = "maestro"
version = "0.1.0"
description = "CLI Toolkits for Project Maestro (use `uv run *`)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-celery-results>=2.6.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.3.0",
    "mineru[pipeline]>=3.0.9",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
